Prevent long flowing words from breaking the layout on small devices

--- a/app/public/wp-content/themes/chasearmstrongblog/style.css
+++ b/app/public/wp-content/themes/chasearmstrongblog/style.css
@@ -376,6 +376,7 @@ p {
   font-weight: 300;
   font-size: 16px;
   line-height: 24px;
+  word-break: break-word;
 }
 
 /* Additional styling */
